use circle barrial or semaphore to coobrate the multi thread